# XenakiosModules

./: .gitmodules  LICENSE  Makefile  README.md  klang_cheby_table.txt  modulediagram.dot  plugin.json
dep/rubberband/: RubberBandStretcher.h
res/scala_scales/: 12tet.scl  19tet_sieve01.scl  19tet_sieve02.scl  Ancient Greek Archytas Diatonic.scl  Ancient Greek Archytas Enharmonic.scl  Ancient Greek Didymus Chromatic.scl  Chopi Xylophone.scl  ED3o2-04.scl  Indonesian Pelog.scl  Japanese Hirajoshi.scl  carlos alpha reduced 2.scl  carlos alpha reduced.scl  carlos alpha.scl  dominant 7th 1.scl  equally tempered chromatic.scl  equally tempered fifths.scl  equally tempered major.scl  equally tempered minor.scl  equally tempered whole tone.scl  foo 1.scl  fourth_ji.scl  major_chord_et.scl  major_chord_ji.scl  major_seventh_ji.scl  major_sixth_ji.scl  major_third_ji.scl  major_tone_ji.scl  minor_chord_et.scl  minor_chord_ji.scl  minor_seventh_ji.scl  minor_sixth_ji.scl  minor_third_ji.scl  ninth1_ji.scl  ninth2_ji.scl  ninth_chord2_et.scl  ninth_chord_et.scl  octave.scl  pure fifths.scl  syntonic_comma.scl  tetra01.scl  (+3 more)
src/: audiostretcher.cpp  audiostretcher.h  clocks.cpp  clocks.h  cosctest.cpp  envelope.cpp  gendyn.cpp  gendyn.h  grain_engine.cpp  granularmodule.cpp  helperwidgets.cpp  helperwidgets.h  imagesynth.cpp  inharmonics.cpp  jcdp_envelope.h  keyframer.cpp  keyframer.h  lofi.cpp  modulationshaper.h  multimod.cpp  permutationsynth.cpp  plugin.cpp  plugin.hpp  polyrandom.cpp  sampler.cpp  scaleosc.cpp  spatializer.cpp  st.cpp  weightedrandom.cpp  weightedrandom.h  wtosc.h  xcvshaper.cpp  xenutils.cpp  xenutils.h  xquantizer.cpp  xrandom.cpp
src/audiomodules/: CMakeLists.txt  Makefile  gendyn.cpp  gendyn.h  granularmodule.cpp  imagesynth.cpp  lofi.cpp  nocturncontrol.h  sampler.cpp  scaleosc.cpp
src/audiomodules/claphosting/: claphost.cpp  claphost.h
(+93 files in other folders)
